; ModuleID = '/home/carl/AnghaBench/hashcat/src/extr_status.c_status_get_speed_sec_all.c'
source_filename = "/home/carl/AnghaBench/hashcat/src/extr_status.c_status_get_speed_sec_all.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@HCBUFSIZ_TINY = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @status_get_speed_sec_all(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca double, align 8
  %4 = alloca i8*, align 8
  store i32* %0, i32** %2, align 8
  %5 = load i32*, i32** %2, align 8
  %6 = call double @status_get_hashes_msec_all(i32* %5)
  store double %6, double* %3, align 8
  %7 = load i32, i32* @HCBUFSIZ_TINY, align 4
  %8 = call i64 @hcmalloc(i32 %7)
  %9 = inttoptr i64 %8 to i8*
  store i8* %9, i8** %4, align 8
  %10 = load double, double* %3, align 8
  %11 = fmul double %10, 1.000000e+03
  %12 = load i8*, i8** %4, align 8
  %13 = load i32, i32* @HCBUFSIZ_TINY, align 4
  %14 = call i32 @format_speed_display(double %11, i8* %12, i32 %13)
  %15 = load i8*, i8** %4, align 8
  ret i8* %15
}

declare dso_local double @status_get_hashes_msec_all(i32*) #1

declare dso_local i64 @hcmalloc(i32) #1

declare dso_local i32 @format_speed_display(double, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
